--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-# Only needed if not using vault bootstrap (spring.cloud.vault.enabled=false)
-spring.cloud.vault.enabled=true
 spring.cloud.vault.uri=http://127.0.0.1:8200
 spring.cloud.vault.token=00000000-0000-0000-0000-000000000000
+vault.base.path=secret/spring-boot-vault-demo
